--- a/Assignment 1/static/base.css
+++ b/Assignment 1/static/base.css
@@ -107,3 +107,14 @@ table tbody tr:nth-child(even) {
   font-size: 13px;
   text-align: center;
 }
+
+h4 {
+  /* font-size: var(--h4-size); */
+  /* font-variation-settings: "wght" 500; */
+  font-weight: bold;
+  font-variant: normal;
+  text-align: center;
+  text-transform: capitalize;
+  /* text-transform: uppercase; */
+  /* margin: 0 0 4px 0; */
+}
